# muskitty-html5-parser

./: Cargo.toml  LLM_GENERATION.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
src/error/: mod.rs
src/parser/: dispatch.rs  foreign.rs  helpers.rs  insertion_mode.rs  mod.rs
src/tokenizer/: entities.rs  impls.rs  mod.rs  trait_def.rs  types.rs
tests/: html5lib_gap_report.md  html5lib_tokenizer.rs  html5lib_tree_construction.rs  parser_skeleton.rs  tree_construction.rs  tree_construction_gap_report.md  tree_construction_gap_report.txt
